tests/core/data/csl/TypeLoaderTests/SyntaxErrors/struct4.csl
// missing semicolon
struct struct4
{
	string name;
}

import struct1;
